--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -2,12 +2,12 @@
 # Name your project! Project names should contain only lowercase characters
 # and underscores. A good package name should reflect your organization's
 # name or the intended use of these models
-name: 'my_new_project'
+name: 'dbt_jobs'
 version: '1.0.0'
 config-version: 2
 
 # This setting configures which "profile" dbt uses for this project.
-profile: 'default'
+profile: 'dbt_jobs'
 
 # These configurations specify where dbt should look for different types of files.
 # The `source-paths` config, for example, states that models in this project can be
@@ -32,7 +32,25 @@ clean-targets:         # directories to be removed by `dbt clean`
 # as tables. These settings can be overridden in the individual model files
 # using the `{{ config(...) }}` macro.
 models:
-  my_new_project:
+  dbt_jobs:
       # Applies to all files under models/example/
       example:
           materialized: view
+
+seeds:
+  +quote_columns: true
+  dbt_jobs:
+    raw_job_descriptions:
+      +column_types:
+        job_id: bigint
+        job_description: varchar(20000)
+    
+    raw_job_postings:
+      +column_types:
+        job_id: bigint
+        title: varchar(250)
+        company: varchar(250)
+        location: varchar(250)
+        job_function: varchar(50)
+        industries: varchar(50)
+        seniority: varchar(50)
